{
    "name": "TestKeyboard",
    "maps": [
        {
            "name": "Test",
            "id": "5af9ad41-263f-4ceb-9ba1-8d16a5bec9a4",
            "actions": [
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "feb8c0e4-0d00-42a1-b1dd-ac1e49cc8ad0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VolumeDown",
                    "type": "Button",
                    "id": "4f5e87fb-d398-49a1-8d14-884ad93bdb06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VolumeUp",
                    "type": "Button",
                    "id": "7632be5d-40bb-4c72-ae02-d85ad89f0506",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mute",
                    "type": "Button",
                    "id": "ae009dec-9b28-47cd-9db8-c70d007734fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnMute",
                    "type": "Button",
                    "id": "b0614292-af04-4bb1-aeb2-fc473d7913d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CollisionOccured",
                    "type": "Button",
                    "id": "7133686e-1e04-46c6-8cff-9343d5d2a08a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponFired",
                    "type": "Button",
                    "id": "f64c992e-6038-44a7-98a9-76e9371f16ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Explosion",
                    "type": "Button",
                    "id": "1c4ecf5f-29bd-4144-9dc4-242a5d169963",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SfxTest",
                    "type": "Button",
                    "id": "d8cb067b-0b93-4bcb-9a7d-9a4655fcc006",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MusicPlay",
                    "type": "Button",
                    "id": "29585889-f7b7-42b4-b023-90a534893bc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MusicStop",
                    "type": "Button",
                    "id": "cd6b3103-ce53-4da1-8114-5e3dc8e882f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MusicPause",
                    "type": "Button",
                    "id": "e27b2729-8ef7-4275-867c-9a9175a958c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MusicUnpause",
                    "type": "Button",
                    "id": "a4e694b7-1a1d-4d71-9e7d-4578e73d8a15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "494b0363-dab9-4954-b0db-6c7e4ca01cd4",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b94662e3-6698-4815-8f89-4fbf87d8900f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35cceb5e-3e15-4c34-bfa7-6e725bafcaf1",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VolumeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79de4445-b081-4136-a799-8b71ec134058",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b29b82c-0d43-415b-a529-ff63bfc4fbee",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnMute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "470946f4-0523-42df-a737-3dd78487ef8e",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CollisionOccured",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e1c1c01-2835-4c39-9fbe-15724b7163a5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponFired",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75ae7e2e-2b35-4c2e-83fa-3cefe5a680e8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Explosion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57409842-e854-4983-a076-bb46eb085096",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SfxTest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f5d6b94-9eaf-4b9a-b753-da39862e2817",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MusicPlay",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53afb665-608f-4c71-9719-59fa17fde60d",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MusicStop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db7193d4-4978-4fe8-89b4-fd75c3e47fcb",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MusicPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8179af17-74f6-4a7f-8b12-c29297917acf",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MusicUnpause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}